// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component 1`] = `"() => create(\\"div\\", {}, \\"Hello World\\");"`;

exports[`component 2`] = `"() => <div>Hello World</div>;"`;

exports[`multiple 1`] = `
"({
  hello
}) => create(Fragment, {}, create(\\"div\\", {}, \\"Foo\\"), create(\\"div\\", {}, \\"Bar\\"));"
`;

exports[`multiple 2`] = `
"({
  hello
}) => <Fragment><div>Foo</div><div>Bar</div></Fragment>;"
`;

exports[`switch 1`] = `
"({
  hello
}) => create(\\"div\\", {
  \\"className\\": join(\\"do_erd\\", false)
}, hello ? create(\\"div\\", {}, \\"Hello World\\") : create(\\"div\\", {}, \\"Goodbye World\\"));"
`;

exports[`switch 2`] = `
"({
  hello
}) => <div className={join(\\"do_erd\\", false)}>{hello ? <div>Hello World</div> : <div>Goodbye World</div>}</div>;"
`;
